<resources>
    <string name="app_name">Proyecto Chignautla</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="acceder">Acceder</string>
    <string name="h_ayuntamiento_de_chignautla">H. Ayuntamiento de Chignautla.</string>
    <string name="bienvenido">Bienvenido!!</string>
    <string name="por_favor_a_ade_un_reporte">Por favor añade un reporte</string>
    <string name="a_adir">Añadir</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="regresar">Regresar</string>
    <string name="accesar">Accesar</string>
    <string name="favor_de_llenar_siguientes_campos">Favor de llenar siguientes campos</string>
    <string name="xls">XLS</string>
    <string name="pdf">PDF</string>
    <string name="ingrese_su_colonia">Ingrese su Colonia</string>
    <string name="ingrese_calle_1">Ingrese Calle 1</string>
    <string name="ingrese_su_apellido_materno">Ingrese su Apellido Materno</string>
    <string name="ingrese_su_edad">Ingrese su Edad</string>
    <string name="ingrese_calle_2">Ingrese Calle 2</string>
    <string name="ingrese_su_apellido_paterno">Ingrese su Apellido Paterno</string>
    <string name="agrege_una_descripci_n">Agrege una Descripción</string>
    <string name="ingrese_su_n_mero_de_telefono">Ingrese su Número de Telefono</string>
    <string name="ingrese_su_nombre">Ingrese su Nombre</string>
    <string name="guardar">Guardar</string>
    <string name="ingrese_su_nombre_de_usuario">Ingrese su Nombre de Usuario</string>
    <string name="ingrese_su_correo_electr_nico">Ingrese su Correo Electrónico</string>
    <string name="ingrese_su_contrase_a">Ingrese su Contraseña</string>
    <string name="rea">Área</string>
    <string name="problema">Problema</string>
    <string name="fecha_de_registro">Fecha De Registro</string>
    <string name="status">Status</string>
    <string name="imagenreporte">ImagenReporte</string>
    <string name="seleccione_el_rea">Seleccione el Área</string>
</resources>