<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:orientation="horizontal">

    <Button
        android:id="@+id/btnShow"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginLeft="5dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:text="Ver Detalles" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/areaRC"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:text="@string/rea" />


        <TextView
            android:id="@+id/problemaRC"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/problema" />


        <TextView
            android:id="@+id/created_atRC"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/fecha_de_registro" />


        <TextView
            android:id="@+id/statusRC"
            android:layout_width="145dp"
            android:layout_height="30dp"
            android:text="@string/status" />
    </LinearLayout>

</LinearLayout>