<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterFragment">


    <Button
        android:id="@+id/btnRegisterLogin"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/botontheme"
        android:text="@string/regresar"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/favor_de_llenar_siguientes_campos"
        android:textAlignment="center"
        android:textSize="25sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNombreRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="80dp"
                android:ems="10"
                android:hint="@string/ingrese_su_nombre"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/etApellidoPaternoRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="80dp"
                android:ems="10"
                android:hint="@string/ingrese_su_apellido_paterno"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/etApellidoMaternoRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="80dp"
                android:ems="10"
                android:hint="@string/ingrese_su_apellido_materno"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/etTelefonoRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="80dp"
                android:ems="10"
                android:hint="@string/ingrese_su_n_mero_de_telefono"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/etCorreoRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="80dp"
                android:ems="10"
                android:hint="@string/ingrese_su_correo_electr_nico"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/etUsuarioRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="80dp"
                android:ems="10"
                android:hint="@string/ingrese_su_nombre_de_usuario"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/etContrasenaRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="80dp"
                android:ems="10"
                android:hint="@string/ingrese_su_contrase_a"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/btnGuardarRegister"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginStart="260dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/botontheme"
                android:text="@string/guardar"
                tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>