<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginFragment">

    <Button
        android:id="@+id/btnLoginMain"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/botontheme"
        android:text="@string/regresar" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-150dp"
        android:ems="10"
        android:hint="@string/usuario"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-50dp"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnLoginIndex"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:background="@drawable/botontheme"
        android:text="@string/accesar" />

    <Button
        android:id="@+id/btnLoginRegister"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        android:background="@drawable/botontheme"
        android:text="Registrarse" />

</FrameLayout>